added basic messaging between master and nodes