@@ -1,12 +1,10 @@
 package pl.majchrzw.loadtester.shared;
 
-import org.springframework.stereotype.Service;
-
 import java.net.http.HttpClient;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
-@Service
+
 public class RequestExecutor {
 	
 	private ExecutorService executorService;
@@ -14,14 +12,30 @@ public class RequestExecutor {
 	private HttpClient httpClient;
 	
 	public RequestExecutor() {
-		executorService = Executors.newFixedThreadPool(5);
-		httpClient = HttpClient.newBuilder()
-				.executor(executorService)
-				.build();
+		executorService = Executors.newVirtualThreadPerTaskExecutor();
+		//httpClient = HttpClient.newBuilder()
+		//		.executor(executorService)
+		//		.build();
 	}
 	
 	public void run() {
-	
+		//System.setProperty("jdk.virtualThreadScheduler.parallelism", String.valueOf(10));
+		//System.setProperty("jdk.virtualThreadScheduler.maxPoolSize", String.valueOf(10));
+		
+		//System.out.println(System.getProperty("jdk.virtualThreadScheduler.parallelism"));
+		//System.out.println(System.getProperty("jdk.virtualThreadScheduler.maxPoolSize"));
+		//System.out.println(System.getProperty("jdk.virtualThreadScheduler.minRunnable"));
+		for (int i = 0; i < 10; i++) {
+			var test = executorService.submit(() -> {
+				System.out.println("Task of thread: " + Thread.currentThread().toString());
+				try {
+					Thread.sleep(1000);
+				} catch (InterruptedException e) {
+					throw new RuntimeException(e);
+				}
+				System.out.println("Ended thread: " + Thread.currentThread().toString());
+			});
+		}
 	}
 	
 }
